--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A cute Valentine's Day page to ask someone to be your Valentine!">
+  <meta name="description" content="Asking Rylee to be my Girlfriend">
   <meta name="theme-color" content="#ffd0e5">
-  <title>Valentine's Day</title>
+  <title>Rylee's valentine guide</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   <style>
@@ -49,7 +49,7 @@
         class="rounded-md h-[300px] object-cover"
       />
       <h1 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">
-        Will you be my Valentine?
+        Rylee Will you be my Forever Valentine?
       </h1>
       <div id="responseButtons" class="flex gap-4 pt-5 items-center">
         <button
@@ -94,21 +94,21 @@
 
       const NO_BUTTON_MESSAGES = [
         'No',
-        'Are you sure?',
-        'Pookie please',
+        'Are you sure Rylee?',
+        'Stinkbum please',
         "Don't do this to me :(",
         "You're breaking my heart",
-        "I'm gonna cry...",
+        "I’ll be sad forever",
       ];
 
       const ALT_TEXTS = [
-        'Cute kitten with flowers',
-        'Sad kitten looking up',
-        'Kitten begging',
-        'Heartbroken kitten',
-        'Crying kitten',
-        'Devastated kitten',
-        'Happy kitten celebrating',
+   'A floating heart drifting your way 💖',
+  'A rose for you, hoping you’ll say yes 🌹',
+  'Chocolate and love, pleading nicely 🍫🥺',
+  'A sad face, don’t break my heart 💔',
+  'Tears of hope, waiting for your answer 😢',
+  'Shocked and dramatic, pleading for yes 😱',
+  'Celebration confetti, yayyy we did it! 🎉❤️'
       ];
 
       // State
@@ -160,3 +160,4 @@
   </script>
 </body>
 </html>
+
