--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
       const MAX_NO_CLICKS = 5;
 
       const IMAGE_PATHS = [
-        './images/image1.gif',
-        './images/image2.gif',
-        './images/image3.gif',
-        './images/image4.gif',
-        './images/image5.gif',
-        './images/image6.gif',
-        './images/image7.gif',
+ './images/photo1.jpg',
+  './images/photo2.jpg',
+  './images/photo3.jpg',
+  './images/photo4.jpg',
+  './images/photo5.jpg',
+  './images/photo6.jpg',
+  './images/photo7.jpg',
       ];
 
       const NO_BUTTON_MESSAGES = [
@@ -160,4 +160,5 @@
   </script>
 </body>
 </html>
+
 
