--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Will You Be My Valentine?</title>
+  <title>Rylee, Will You Be My Forever Valentine?</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   <style>
@@ -48,7 +48,7 @@
   <img id="imageDisplay" src="https://placekitten.com/300/300" alt="Cute kitten with flowers">
 
   <h1 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">
-    Will you be my Valentine?
+    Will you be my Forever Valentine?
   </h1>
 
   <div id="responseButtons" class="flex gap-4 pt-5">
@@ -88,11 +88,11 @@
 
   const NO_BUTTON_MESSAGES = [
     'No',
-    'Are you sure?',
-    'Really sure?',
-    'Think again!',
-    'Please?',
-    'Last chance!',
+    'Why would you even say NO?',
+    'Okay i know you mad, ill buy you food?',
+    'pizza?',
+    'Sushi and a Pink Monster?',
+    'seems like theres a problem,!',
   ];
 
   let noClickCount = 0;
@@ -125,6 +125,7 @@
 
 </body>
 </html>
+
 
 
 
