--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <img id="imageDisplay" src="https://placekitten.com/300/300" alt="Cute kitten with flowers">
 
   <h1 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">
-    Will you be my Forever Valentine?
+    Rylee, Will you be my Forever Valentine?
   </h1>
 
   <div id="responseButtons" class="flex gap-4 pt-5">
@@ -88,11 +88,15 @@
 
   const NO_BUTTON_MESSAGES = [
     'No',
-    'Why would you even say NO?',
-    'Okay i know you mad, ill buy you food?',
+    'Why would you even say no my stinkbum?',
+    'Okay why did you say no again?, ill buy you food?',
     'pizza?',
     'Sushi and a Pink Monster?',
-    'seems like theres a problem,!',
+    'Last chance',
+    'im gonna die if you say NO',
+    'okay I died',
+    'You speaking to Jeandres ghost',
+    'okay fr now, you cant say no again',
   ];
 
   let noClickCount = 0;
@@ -125,6 +129,7 @@
 
 </body>
 </html>
+
 
 
 
