--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     'No',
     'Why would you even say no my stinkbum?',
     'Okay why did you say no again?, ill buy you food?',
-    'pizza?',
-    'Sushi and a Pink Monster?',
-    'Last chance',
+    'pizza, sushi, your choice?',
+    'STOP SAYING NO?',
+    'Okay fine, now you really cant say no, HAHAHAHAHAHA',
     'im gonna die if you say NO',
     'okay I died',
     'You speaking to Jeandres ghost',
@@ -111,6 +111,7 @@
 
 </body>
 </html>
+
 
 
 
